--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
               </p>
               </div>
               <div class="Mybuttons">
-                <button id="MIP" onclick="window.location.href='https:/drive.google.com/drive/folders/1ibLw_rq2-id1lnzMnp2nQeAuoEL7UigW?usp=sharing'">MIP</button>
+                <button id="MIP" onclick="window.location.href='https://drive.google.com/drive/folders/19WVXl17Tt7HMARMT9NBvBwjvgZa_g1Mj?usp=sharing'">MIP</button>
                 <button id="GEGM" onclick="window.location.href='https:/drive.google.com/drive/folders/1n1PZeD9eibBcUHR4dusxEBPQjP_vrGDq'">GEGM</button>
                 <button id="BCG" onclick="window.location.href='https:/drive.google.com/drive/u/0/mobile/folders/1ELPSpPTowzdAgaUjLzTRzK0z94qO82t8'">BCG</button>
                 <button id="Mega" onclick="window.location.href='https:/mega.nz/folder/uB42lKQZ#GtPUgfVnTJbEqFF6L8yACA'">Mega</button>
