--- a/index.html
+++ b/index.html
@@ -118,12 +118,13 @@
                *Here are the parcours* 
               </p>
               </div>
-              <div class="Mybuttons">
-                <button id="MIP" onclick="window.location.href='https://drive.google.com/drive/folders/19WVXl17Tt7HMARMT9NBvBwjvgZa_g1Mj?usp=sharing'">MIP</button>
-                <button id="GEGM" onclick="window.location.href='https:/drive.google.com/drive/folders/1n1PZeD9eibBcUHR4dusxEBPQjP_vrGDq'">GEGM</button>
-                <button id="BCG" onclick="window.location.href='https:/drive.google.com/drive/u/0/mobile/folders/1ELPSpPTowzdAgaUjLzTRzK0z94qO82t8'">BCG</button>
-                <button id="Mega" onclick="window.location.href='https:/mega.nz/folder/uB42lKQZ#GtPUgfVnTJbEqFF6L8yACA'">Mega</button>
-            </div>
+ <div class="Mybuttons">
+    <button id="MIP" onclick="window.open('https://drive.google.com/drive/folders/1LBuI29nWl2TipIv1aYeA9glcmEIqYkny?usp=sharing', '_blank')">MIP</button>
+    <button id="GEGM" onclick="window.open('https://drive.google.com/drive/folders/1n1PZeD9eibBcUHR4dusxEBPQjP_vrGDq', '_blank')">GEGM</button>
+    <button id="BCG" onclick="window.open('https://drive.google.com/drive/u/0/mobile/folders/1ELPSpPTowzdAgaUjLzTRzK0z94qO82t8', '_blank')">BCG</button>
+    <button id="Mega" onclick="window.open('https://mega.nz/folder/uB42lKQZ#GtPUgfVnTJbEqFF6L8yACA', '_blank')">Mega</button>
+</div>
+
         </section>
     </main>
     <div class="controls">
