--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
               </div>
  <div class="Mybuttons">
     <button id="MIP" onclick="window.open('https://drive.google.com/drive/folders/1LBuI29nWl2TipIv1aYeA9glcmEIqYkny?usp=sharing', '_blank')">MIP</button>
-    <button id="GEGM" onclick="window.open('https://drive.google.com/drive/folders/1n1PZeD9eibBcUHR4dusxEBPQjP_vrGDq', '_blank')">GEGM</button>
+    <button id="GEGM" onclick="window.open('https://drive.google.com/drive/folders/1mqXjcY_5gN2lmPxBhqNyRwIAMzceDmbM?usp=sharing', '_blank')">GEGM</button>
     <button id="BCG" onclick="window.open('https://drive.google.com/drive/u/0/mobile/folders/1ELPSpPTowzdAgaUjLzTRzK0z94qO82t8', '_blank')">BCG</button>
     <button id="Mega" onclick="window.open('https://mega.nz/folder/uB42lKQZ#GtPUgfVnTJbEqFF6L8yACA', '_blank')">Mega</button>
 </div>
