--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
               <div class="Mybuttons"> <div class="dropdown">
                  <button class="main-btn">MIP</button> 
                    <div class="dropdown-content">
-                     <button onclick="window.open('https://drive.google.com/drive/folders/1tDC-lk7wR626gmdwdvo_3AMb53GfZ2Xn?usp=sharing', '_blank')">S1</button> 
+                     <button id="S1" onclick="location.href='https:/drive.google.com/drive/folders/1Vytppjw7IWNpW78GZNEBYcOdOo94nbQZ?usp=sharing'">S1</button> 
                      <button onclick="window.open('https:/drive.google.com/drive/folders/1Xhu5VnNJBotD2CMos7XxxOhxUvN2ka0J?usp=sharing', '_blank')">S2</button> 
                      <button onclick="window.open('https:/drive.google.com/drive/folders/1Vytppjw7IWNpW78GZNEBYcOdOo94nbQZ?usp=sharing', '_blank')">S3</button> 
                      <button onclick="window.open('https:/drive.google.com/drive/folders/1Ql_3BPyORo6HqDGcImaD8M_TK8IrfH0f?usp=sharing', '_blank')">S4</button> 
@@ -129,7 +129,7 @@
                     </div> 
                 <div class="dropdown"> <button class="main-btn">GEGM</button> 
                         <div class="dropdown-content">
-                         <button onclick="window.open('https:/drive.google.com/drive/folders/1AtLY7qJ92591Bg3NzqXapOT9jJtIYwO1?usp=sharing', '_blank')">S1</button>
+                         <button onclick='https:/drive.google.com/drive/folders/1AtLY7qJ92591Bg3NzqXapOT9jJtIYwO1?usp=sharing', '_blank')">S1</button>
                           <button onclick="window.open('https:/drive.google.com/drive/folders/1AnyfNOUt6ME2r4miHmxfSq9bRCtRHMHv?usp=sharing', '_blank')">S2</button> 
                           <button onclick="window.open('https:/drive.google.com/drive/folders/17fWFkVkDJIFnmQZhUlmanmKORyl5kpQJ?usp=sharing', '_blank')">S3</button> 
                           <button onclick="window.open('https:/drive.google.com/drive/folders/1oKqQpDDS5OrrKqmLHIzpHbSd9YT4YK7_?usp=sharing', '_blank')">S4</button> 
