--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
                     Hello Everyone <span>Welcome Here.</span>
                 </h1>
                 <p>
-                    Welcome to EduVerse, your gateway to a world of knowledge and growth! 🌟 
+                    Welcome to EduVerse, your gateway to a world of knowledge and growth! 
                     Dive into a rich array of courses, interactive lessons, and resources designed to elevate your learning experience.
                      Whether you're a curious beginner or a seasoned expert, EduVerse has something for everyone. Join our vibrant community of learners and educators, and embark on your journey to mastery today.
-                     Start exploring EduVerse and unlock your potential! 🚀📚
+                     Start exploring EduVerse and unlock your potential! 📚
                 </p>
                You can catch me here!
                <div class="social-container">
