--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
               <div class="Mybuttons"> <div class="dropdown">
                  <button class="main-btn">MIP</button> 
                    <div class="dropdown-content">
-                     <button onclick="window.open('', '_blank')">S1</button> 
+                     <button onclick="window.open('https://drive.google.com/drive/folders/1LBuI29nWl2TipIv1aYeA9glcmEIqYkny?usp=sharing', '_blank')">S1</button> 
                      <button onclick="window.open('', '_blank')">S2</button> 
                      <button onclick="window.open('', '_blank')">S3</button> 
                      <button onclick="window.open('', '_blank')">S4</button> 
