--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                     </div> 
                 <div class="dropdown"> <button class="main-btn">GEGM</button> 
                         <div class="dropdown-content">
-                         <button onclick="window.open('', '_blank')">S1</button>
+                         <button onclick="window.open('https://drive.google.com/drive/folders/1-52GBRxZs463UD6w1TG1dpdCq4eWPHLY?usp=sharing', '_blank')">S1</button>
                           <button onclick="window.open('', '_blank')">S2</button> 
                           <button onclick="window.open('', '_blank')">S3</button> 
                           <button onclick="window.open('', '_blank')">S4</button> 
