--- a/index.html
+++ b/index.html
@@ -146,15 +146,15 @@
               <div class="Mybuttons"> <div class="dropdown">
                  <button class="main-btn">MIP</button> 
                    <div class="dropdown-content">
-                     <button onclick="window.open('https://drive.google.com/drive/folders/1LBuI29nWl2TipIv1aYeA9glcmEIqYkny?usp=sharing', '_blank')">S1</button> 
-                     <button onclick="window.open('', '_blank')">S2</button> 
-                     <button onclick="window.open('', '_blank')">S3</button> 
-                     <button onclick="window.open('', '_blank')">S4</button> 
+                     <button onclick="window.open('https://drive.google.com/drive/folders/1-52GBRxZs463UD6w1TG1dpdCq4eWPHLY?usp=sharing', '_blank')">S1</button> 
+                     <button onclick="window.open('https://drive.google.com/drive/folders/1Xhu5VnNJBotD2CMos7XxxOhxUvN2ka0J?usp=sharing', '_blank')">S2</button> 
+                     <button onclick="window.open('https://drive.google.com/drive/folders/1Vytppjw7IWNpW78GZNEBYcOdOo94nbQZ?usp=sharing', '_blank')">S3</button> 
+                     <button onclick="window.open('https://drive.google.com/drive/folders/1Ql_3BPyORo6HqDGcImaD8M_TK8IrfH0f?usp=sharing', '_blank')">S4</button> 
                     </div> 
                     </div> 
                 <div class="dropdown"> <button class="main-btn">GEGM</button> 
                         <div class="dropdown-content">
-                         <button onclick="window.open('https://drive.google.com/drive/folders/1-52GBRxZs463UD6w1TG1dpdCq4eWPHLY?usp=sharing', '_blank')">S1</button>
+                         <button onclick="window.open('g', '_blank')">S1</button>
                           <button onclick="window.open('', '_blank')">S2</button> 
                           <button onclick="window.open('', '_blank')">S3</button> 
                           <button onclick="window.open('', '_blank')">S4</button> 
