--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                     </div> 
                 <div class="dropdown"> <button class="main-btn">GEGM</button> 
                         <div class="dropdown-content">
-                         <button onclick="window.open('g', '_blank')">S1</button>
+                         <button onclick="window.open('', '_blank')">S1</button>
                           <button onclick="window.open('', '_blank')">S2</button> 
                           <button onclick="window.open('', '_blank')">S3</button> 
                           <button onclick="window.open('', '_blank')">S4</button> 
@@ -169,6 +169,10 @@
                             <button onclick="window.open('', '_blank')">S4</button> 
                         </div>
                     </div>
+                   <div class="dropdown"> <button class="main-btn">MEGA</button> 
+                        <div class="dropdown-content">
+                         <button onclick="window.open('https://mega.nz/folder/uB42lKQZ#GtPUgfVnTJbEqFF6L8yACA', '_blank')">All Mega Content</button> 
+                        </div> 
                         </div> 
                  </div> 
             </div>
