--- a/index.html
+++ b/index.html
@@ -124,10 +124,10 @@
               <div class="Mybuttons"> <div class="dropdown">
                  <button class="main-btn">MIP</button> 
                    <div class="dropdown-content">
-                     <button onclick="window.open('https:/drive.google.com/drive/folders/1-52GBRxZs463UD6w1TG1dpdCq4eWPHLY?usp=sharing', '_blank')">S1</button> 
-                     <button onclick="window.open('https:/drive.google.com/drive/folders/1Xhu5VnNJBotD2CMos7XxxOhxUvN2ka0J?usp=sharing', '_blank')">S2</button> 
-                     <button onclick="window.open('https:/drive.google.com/drive/folders/1Vytppjw7IWNpW78GZNEBYcOdOo94nbQZ?usp=sharing', '_blank')">S3</button> 
-                     <button onclick="window.open('https:/drive.google.com/drive/folders/1Ql_3BPyORo6HqDGcImaD8M_TK8IrfH0f?usp=sharing', '_blank')">S4</button> 
+                     <button onclick="window.open('https://drive.google.com/drive/folders/1gCwo65gZ-RqJtRirlJmtDD--ERmvnwMm?usp=sharing', '_blank')">S1</button> 
+                     <button onclick="window.open('', '_blank')">S2</button> 
+                     <button onclick="window.open('', '_blank')">S3</button> 
+                     <button onclick="window.open('', '_blank')">S4</button> 
                     </div> 
                     </div> 
                 <div class="dropdown"> <button class="main-btn">GEGM</button> 
@@ -150,8 +150,8 @@
                     <div class="dropdown">
                         <button class="main-btn">MEGA</button> 
                         <div class="dropdown-content">
-                       <button onclick="window.open('https:/mega.nz/folder/uB42lKQZ#GtPUgfVnTJbEqFF6L8yACA', '_blank')">All Mega Content</button>
-                       <button onclick="window.open('https:/lnkd.in/eUVyyDP8', '_blank')">Drive Sup</button>  
+                       <button onclick="window.open('', '_blank')">All Mega Content</button>
+                       <button onclick="window.open('', '_blank')">Drive Sup</button>  
                    </div>
                </div>
         </section>
