--- a/index.html
+++ b/index.html
@@ -125,14 +125,14 @@
                  <button class="main-btn">MIP</button> 
                    <div class="dropdown-content">
                      <button onclick="window.open('https://drive.google.com/drive/folders/1gCwo65gZ-RqJtRirlJmtDD--ERmvnwMm?usp=sharing', '_blank')">S1</button> 
-                     <button onclick="window.open('', '_blank')">S2</button> 
-                     <button onclick="window.open('', '_blank')">S3</button> 
-                     <button onclick="window.open('', '_blank')">S4</button> 
+                     <button onclick="window.open('https://drive.google.com/drive/folders/1d__W5fLyLSKt4gnrcOw11U1pI6Ys7_GJ?usp=sharing', '_blank')">S2</button> 
+                     <button onclick="window.open('https://drive.google.com/drive/folders/15gdNWlRbpmlQum36QRGbicwNARpGVwxF?usp=sharing', '_blank')">S3</button> 
+                     <button onclick="window.open('https://drive.google.com/drive/folders/11ySyxOSephluDKFlsRE4mrvS-4dNLLvt?usp=sharing', '_blank')">S4</button> 
                     </div> 
                     </div> 
                 <div class="dropdown"> <button class="main-btn">GEGM</button> 
                         <div class="dropdown-content">
-                         <button onclick="window.open('', '_blank')">S1</button>
+                         <button onclick="window.open('https://drive.google.com/drive/folders/1ZntXC5djirXRsFqF8lBdVi5rYeKbPlBc?usp=sharing', '_blank')">S1</button>
                           <button onclick="window.open('', '_blank')">S2</button> 
                           <button onclick="window.open('', '_blank')">S3</button> 
                           <button onclick="window.open('', '_blank')">S4</button> 
@@ -150,8 +150,8 @@
                     <div class="dropdown">
                         <button class="main-btn">MEGA</button> 
                         <div class="dropdown-content">
-                       <button onclick="window.open('', '_blank')">All Mega Content</button>
-                       <button onclick="window.open('', '_blank')">Drive Sup</button>  
+                       <button onclick="window.open('https://mega.nz/folder/uB42lKQZ#GtPUgfVnTJbEqFF6L8yACA', '_blank')">All Mega Content</button>
+                       <button onclick="window.open('https://lnkd.in/eUVyyDP8', '_blank')">Drive Sup</button>  
                    </div>
                </div>
         </section>
