--- a/index.html
+++ b/index.html
@@ -95,19 +95,19 @@
         <ul class="social-list">
 
             <li class="social-item">
-              <a href="https://www.facebook.com/soufiyane.khatib" class="social-link">
+              <a href="https://www.facebook.com/soufiyane.khatib" target="_blank" class="social-link">
                 <ion-icon name="logo-facebook"></ion-icon>
               </a>
             </li>
   
             <li class="social-item">
-              <a href="https://www.linkedin.com/in/sofiane-khatib-5b775332b?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" class="social-link">
+              <a href="https://www.linkedin.com/in/sofiane-khatib-5b775332b?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank" class="social-link">
                 <ion-icon name="logo-linkedIn"></ion-icon>
               </a>
             </li>
   
             <li class="social-item">
-              <a href="https://www.instagram.com/sofianekhatiib/profilecard/?igsh=MXF3cGxrcjFha2s3Yw==" class="social-link">
+              <a href="https://www.instagram.com/sofianekhatiib/profilecard/?igsh=MXF3cGxrcjFha2s3Yw==" target="_blank" class="social-link">
                 <ion-icon name="logo-instagram"></ion-icon>
               </a>
             </li>
@@ -218,10 +218,10 @@
               <div class="Mybuttons"> <div class="dropdown">
                  <button class="main-btn">MIP</button> 
                    <div class="dropdown-content">
-                     <button onclick="window.open('https:/drive.google.com/drive/folders/1-52GBRxZs463UD6w1TG1dpdCq4eWPHLY?usp=sharing', '_blank')">S1</button> 
-                     <button onclick="window.open('https:/drive.google.com/drive/folders/1Xhu5VnNJBotD2CMos7XxxOhxUvN2ka0J?usp=sharing', '_blank')">S2</button> 
-                     <button onclick="window.open('https:/drive.google.com/drive/folders/1Vytppjw7IWNpW78GZNEBYcOdOo94nbQZ?usp=sharing', '_blank')">S3</button> 
-                     <button onclick="window.open('https:/drive.google.com/drive/folders/1Ql_3BPyORo6HqDGcImaD8M_TK8IrfH0f?usp=sharing', '_blank')">S4</button> 
+                     <button onclick="window.open('https://drive.google.com/drive/folders/1-52GBRxZs463UD6w1TG1dpdCq4eWPHLY?usp=sharing', '_blank')">S1</button> 
+                     <button onclick="window.open('https://drive.google.com/drive/folders/1Xhu5VnNJBotD2CMos7XxxOhxUvN2ka0J?usp=sharing', '_blan')">S2</button> 
+                     <button onclick="window.open('https://drive.google.com/drive/folders/1Vytppjw7IWNpW78GZNEBYcOdOo94nbQZ?usp=sharing', '_blank')">S3</button> 
+                     <button onclick="window.open('https://drive.google.com/drive/folders/1Ql_3BPyORo6HqDGcImaD8M_TK8IrfH0f?usp=sharing', '_blank')">S4</button> 
                     </div> 
                     </div> 
                 <div class="dropdown"> <button class="main-btn">GEGM</button> 
@@ -244,7 +244,7 @@
                     <div class="dropdown">
                         <button class="main-btn">MEGA</button> 
                         <div class="dropdown-content">
-                       <button onclick="window.open('https:/mega.nz/folder/uB42lKQZ#GtPUgfVnTJbEqFF6L8yACA', '_blank')">All Mega Content</button>
+                       <button onclick="window.open('https://mega.nz/folder/uB42lKQZ#GtPUgfVnTJbEqFF6L8yACA', '_blank')">All Mega Content</button>
                        <button onclick="window.open('https:/lnkd.in/eUVyyDP8', '_blank')">Drive Sup</button>  
                    </div>
                </div>
